[docs-infra] Fix API overflow indicator

--- a/docs/src/components/ReferenceTable/ReferenceTable.css
+++ b/docs/src/components/ReferenceTable/ReferenceTable.css
@@ -31,7 +31,7 @@
   }
 
   .ReferenceNameCell {
-    padding-inline: 0.75rem;
+    padding-left: 0.75rem;
   }
 
   .ReferenceRequired {
@@ -43,7 +43,7 @@
   .ReferenceTypeCell {
     display: none;
     align-items: baseline;
-    padding-inline: 0.75rem;
+    padding-left: 0.75rem;
     font-size: var(--text-sm);
     line-height: 1;
     white-space: nowrap;
@@ -51,7 +51,7 @@
 
   .ReferenceDefaultCell {
     display: none;
-    padding-inline: 0.75rem;
+    padding-left: 0.75rem;
     white-space: nowrap;
   }
 
